feat: enrichissement des données de speaker
