# apps/api/src/speaker/schemaOrgTransformer.js
@@ -1,4 +1,5 @@
 const API_URL = 'http://localhost:3001/api';
+const formatISO = require('date-fns/formatISO');
 
 const formatSpeaker = (speaker) => {
     return {
@@ -17,7 +18,7 @@ const formatSpeaker = (speaker) => {
             '@type': 'CreativeWork',
             '@id': talk.slug,
             identifier: talk.slug,
-            url: `${API_URL}/events/${talk.edition}`,
+            url: `${API_URL}/events/${talk.eventSlug}`,
             name: talk.title,
             format: {
                 label: talk.type,
@@ -26,6 +27,17 @@ const formatSpeaker = (speaker) => {
             abstract: talk.shortDescription,
             video: talk.video,
             image: 'https://caen.camp/static/logoFondBlanc-278da657a83902f7d21083ade8e9ce7a.png',
+            recordedAt: {
+                '@type': 'Event',
+                '@id': talk.eventSlug,
+                identifier: talk.eventSlug,
+                url: `${API_URL}/events/${talk.eventSlug}`,
+                name: talk.eventName,
+                startDate: formatISO(new Date(talk.eventDate)),
+                disambiguatingDescription: talk.eventResume,
+                number: talk.eventNumber,
+                category: 'CaenCamp',
+            },
         })),
     };
 };
